@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - jbj: add rpmkey, a keyctl(1) clone.
     - jbj: disable RPMv3 RSA/DSA signing.
     - jbj: mark RPMv3 code for optional compilation.
     - jbj: snarf /usr and /var values from auto fu to predefine macro values.
